# eventual

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  quick_start.sh  run_tests.sh  seed_data.py  setup_database.sh  start_server.sh
eventual_backend/: main.py
eventual_backend/api/: dependencies.py
eventual_backend/core/: config.py  database.py
eventual_backend/models/: task.py  user.py
eventual_backend/repositories/: base.py  task_repository.py  user_repository.py
eventual_backend/routers/: api.py  tasks.py  users.py
eventual_backend/schemas/: task_schema.py  user_schema.py
eventual_backend/services/: task_service.py  user_service.py
eventual_backend/tests/: conftest.py  test_tasks.py  test_users.py
scripts/: README.md  api_utils.py  demo_workflow.sh  task_crud.sh  test_assignment_requirements.sh  user_crud.sh
